--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.3
   intl: ^0.17.0
+  bloc: ^8.1.0
+  flutter_bloc: ^8.0.1
+
 
 dev_dependencies:
   flutter_test:
